CsAutogen/CsParser.java
// Generated from C:\Users\Ilia\Desktop\Cs.g4 by ANTLR 4.1
package org.itmo.iyakupov;

    import java.util.Set;
    import java.util.HashSet;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CsParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__76=1, T__75=2, T__74=3, T__73=4, T__72=5, T__71=6, T__70=7, T__69=8, 
		T__68=9, T__67=10, T__66=11, T__65=12, T__64=13, T__63=14, T__62=15, T__61=16, 
		T__60=17, T__59=18, T__58=19, T__57=20, T__56=21, T__55=22, T__54=23, 
		T__53=24, T__52=25, T__51=26, T__50=27, T__49=28, T__48=29, T__47=30, 
		T__46=31, T__45=32, T__44=33, T__43=34, T__42=35, T__41=36, T__40=37, 
		T__39=38, T__38=39, T__37=40, T__36=41, T__35=42, T__34=43, T__33=44, 
		T__32=45, T__31=46, T__30=47, T__29=48, T__28=49, T__27=50, T__26=51, 
		T__25=52, T__24=53, T__23=54, T__22=55, T__21=56, T__20=57, T__19=58, 
		T__18=59, T__17=60, T__16=61, T__15=62, T__14=63, T__13=64, T__12=65, 
		T__11=66, T__10=67, T__9=68, T__8=69, T__7=70, T__6=71, T__5=72, T__4=73, 
		T__3=74, T__2=75, T__1=76, T__0=77, IDENTIFIER=78, CHARACTER_LITERAL=79, 
		STRING_LITERAL=80, HEX_LITERAL=81, DECIMAL_LITERAL=82, OCTAL_LITERAL=83, 
		FLOATING_POINT_LITERAL=84, WS=85, COMMENT=86, LINE_COMMENT=87, LINE_COMMAND=88, 
		CLASS=89;
	public static final String[] tokenNames = {
		"<INVALID>", "'&'", "'*'", "'['", "'--'", "'<'", "'continue'", "'!='", 
		"'<='", "'<<'", "'double'", "'abstract'", "'}'", "'float'", "'char'", 
		"'case'", "'do'", "'->'", "'%'", "'*='", "')'", "'signed'", "'unsigned'", 
		"'='", "'goto'", "'const'", "'|='", "'|'", "'!'", "'enum'", "'sizeof'", 
		"'long'", "'<<='", "']'", "'short'", "'-='", "'public'", "'default'", 
		"','", "'-'", "'while'", "'('", "':'", "'&='", "'if'", "'int'", "'private'", 
		"'?'", "'void'", "'>>='", "'...'", "'{'", "'break'", "'+='", "'^='", "'else'", 
		"'++'", "'static'", "'>>'", "'^'", "'.'", "'+'", "'protected'", "'for'", 
		"'return'", "'volatile'", "';'", "'&&'", "'||'", "'>'", "'%='", "'/='", 
		"'switch'", "'/'", "'=='", "'~'", "'internal'", "'>='", "IDENTIFIER", 
		"CHARACTER_LITERAL", "STRING_LITERAL", "HEX_LITERAL", "DECIMAL_LITERAL", 
		"OCTAL_LITERAL", "FLOATING_POINT_LITERAL", "WS", "COMMENT", "LINE_COMMENT", 
		"LINE_COMMAND", "'class'"
	};
	public static final int
		RULE_access_modifier = 0, RULE_other_modifiers = 1, RULE_cls_def = 2, 
		RULE_cls_field = 3, RULE_cls_method = 4, RULE_function_definition = 5, 
		RULE_declaration_specifiers = 6, RULE_declaration = 7, RULE_init_declarator_list = 8, 
		RULE_init_declarator = 9, RULE_direct_declarator = 10, RULE_declarator_suffix = 11, 
		RULE_type_specifier = 12, RULE_type_id = 13, RULE_specifier_qualifier_list = 14, 
		RULE_enum_specifier = 15, RULE_enumerator_list = 16, RULE_enumerator = 17, 
		RULE_type_qualifier = 18, RULE_pointer = 19, RULE_parameter_type_list = 20, 
		RULE_parameter_list = 21, RULE_parameter_declaration = 22, RULE_identifier_list = 23, 
		RULE_type_name = 24, RULE_direct_abstract_declarator = 25, RULE_abstract_declarator_suffix = 26, 
		RULE_initializer = 27, RULE_initializer_list = 28, RULE_argument_expression_list = 29, 
		RULE_additive_expression = 30, RULE_multiplicative_expression = 31, RULE_cast_expression = 32, 
		RULE_unary_expression = 33, RULE_postfix_expression = 34, RULE_unary_operator = 35, 
		RULE_primary_expression = 36, RULE_constant = 37, RULE_expression = 38, 
		RULE_constant_expression = 39, RULE_assignment_expression = 40, RULE_lvalue = 41, 
		RULE_assignment_operator = 42, RULE_conditional_expression = 43, RULE_logical_or_expression = 44, 
		RULE_logical_and_expression = 45, RULE_inclusive_or_expression = 46, RULE_exclusive_or_expression = 47, 
		RULE_and_expression = 48, RULE_equality_expression = 49, RULE_relational_expression = 50, 
		RULE_shift_expression = 51, RULE_statement = 52, RULE_labeled_statement = 53, 
		RULE_compound_statement = 54, RULE_statement_list = 55, RULE_expression_statement = 56, 
		RULE_selection_statement = 57, RULE_iteration_statement = 58, RULE_jump_statement = 59;
	public static final String[] ruleNames = {
		"access_modifier", "other_modifiers", "cls_def", "cls_field", "cls_method", 
		"function_definition", "declaration_specifiers", "declaration", "init_declarator_list", 
		"init_declarator", "direct_declarator", "declarator_suffix", "type_specifier", 
		"type_id", "specifier_qualifier_list", "enum_specifier", "enumerator_list", 
		"enumerator", "type_qualifier", "pointer", "parameter_type_list", "parameter_list", 
		"parameter_declaration", "identifier_list", "type_name", "direct_abstract_declarator", 
		"abstract_declarator_suffix", "initializer", "initializer_list", "argument_expression_list", 
		"additive_expression", "multiplicative_expression", "cast_expression", 
		"unary_expression", "postfix_expression", "unary_operator", "primary_expression", 
		"constant", "expression", "constant_expression", "assignment_expression", 
		"lvalue", "assignment_operator", "conditional_expression", "logical_or_expression", 
		"logical_and_expression", "inclusive_or_expression", "exclusive_or_expression", 
		"and_expression", "equality_expression", "relational_expression", "shift_expression", 
		"statement", "labeled_statement", "compound_statement", "statement_list", 
		"expression_statement", "selection_statement", "iteration_statement", 
		"jump_statement"
	};

	@Override
	public String getGrammarFileName() { return "Cs.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }


		boolean isTypeName(String name) {
			for (int i = Symbols_stack.size()-1; i>=0; i--) {
				Symbols_scope scope = (Symbols_scope)Symbols_stack.get(i);
				if ( scope.types.contains(name) ) {
					return true;
				}
			}
			return false;
		}
	    
	    	Set types; // only track types in order to get parser working

	public CsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Access_modifierContext extends ParserRuleContext {
		public Access_modifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_access_modifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CsListener ) ((CsListener)listener).enterAccess_modifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CsListener ) ((CsListener)listener).exitAccess_modifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CsVisitor ) return ((CsVisitor<? extends T>)visitor).visitAccess_modifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Access_modifierContext access_modifier() throws RecognitionException {
		Access_modifierContext _localctx = new Access_modifierContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_access_modifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			_la = _input.LA(1);
			if ( !(((((_la - 36)) & ~0x3f) == 0 && ((1L << (_la - 36)) & ((1L << (36 - 36)) | (1L << (46 - 36)) | (1L << (62 - 36)) | (1L << (76 - 36)))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Other_modifiersContext extends ParserRuleContext {
		public Other_modifiersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_other_modifiers; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CsListener ) ((CsListener)listener).enterOther_modifiers(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CsListener ) ((CsListener)listener).exitOther_modifiers(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CsVisitor ) return ((CsVisitor<? extends T>)visitor).visitOther_modifiers(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Other_modifiersContext other_modifiers() throws RecognitionException {
		Other_modifiersContext _localctx = new Other_modifiersContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_other_modifiers);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 11) | (1L << 25) | (1L << 57))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Cls_defContext extends ParserRuleContext {
		public Cls_fieldContext cls_field(int i) {
			return getRuleContext(Cls_fieldContext.class,i);
		}
		public Cls_methodContext cls_method(int i) {
			return getRuleContext(Cls_methodContext.class,i);
		}
		public Cls_defContext cls_def(int i) {
			return getRuleContext(Cls_defContext.class,i);
		}
		public List<Cls_methodContext> cls_method() {
			return getRuleContexts(Cls_methodContext.class);
		}
		public List<Cls_fieldContext> cls_field() {
			return getRuleContexts(Cls_fieldContext.class);
		}
		public Access_modifierContext access_modifier() {
			return getRuleContext(Access_modifierContext.class,0);
		}
		public List<Enum_specifierContext> enum_specifier() {
			return getRuleContexts(Enum_specifierContext.class);
		}
		public Enum_specifierContext enum_specifier(int i) {
			return getRuleContext(Enum_specifierContext.class,i);
		}
		public List<Cls_defContext> cls_def() {
			return getRuleContexts(Cls_defContext.class);
		}
		public Other_modifiersContext other_modifiers(int i) {
			return getRuleContext(Other_modifiersContext.class,i);
		}
		public List<Other_modifiersContext> other_modifiers() {
			return getRuleContexts(Other_modifiersContext.class);
		}
		public TerminalNode CLASS() { return getToken(CsParser.CLASS, 0); }
		public Cls_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cls_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CsListener ) ((CsListener)listener).enterCls_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CsListener ) ((CsListener)listener).exitCls_def(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CsVisitor ) return ((CsVisitor<? extends T>)visitor).visitCls_def(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Cls_defContext cls_def() throws RecognitionException {
		Cls_defContext _localctx = new Cls_defContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_cls_def);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(127);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(124); other_modifiers();
					}
					} 
				}
				setState(129);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(131);
			_la = _input.LA(1);
			if (((((_la - 36)) & ~0x3f) == 0 && ((1L << (_la - 36)) & ((1L << (36 - 36)) | (1L << (46 - 36)) | (1L << (62 - 36)) | (1L << (76 - 36)))) != 0)) {
				{
				setState(130); access_modifier();
				}
			}

			setState(136);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 11) | (1L << 25) | (1L << 57))) != 0)) {
				{
				{
				setState(133); other_modifiers();
				}
				}
				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			setState(139); match(CLASS);
			setState(140); match(51);
			setState(147);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					setState(145);
					switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
					case 1:
						{
						setState(141); cls_field();
						}
						break;

					case 2:
						{
						setState(142); cls_method();
						}
						break;

					case 3:
						{
						setState(143); cls_def();
						}
						break;

					case 4:
						{
						setState(144); enum_specifier();
						}
						break;
					}
					} 
				}
				setState(149);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			setState(150); match(12);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Cls_fieldContext extends ParserRuleContext {
		public InitializerContext initializer() {
			return getRuleContext(InitializerContext.class,0);
		}
		public Type_specifierContext type_specifier() {
			return getRuleContext(Type_specifierContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(CsParser.IDENTIFIER, 0); }
		public Access_modifierContext access_modifier() {
			return getRuleContext(Access_modifierContext.class,0);
		}
		public Other_modifiersContext other_modifiers(int i) {
			return getRuleContext(Other_modifiersContext.class,i);
		}
		public List<Other_modifiersContext> other_modifiers() {
			return getRuleContexts(Other_modifiersContext.class);
		}
		public Cls_fieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cls_field; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CsListener ) ((CsListener)listener).enterCls_field(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CsListener ) ((CsListener)listener).exitCls_field(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CsVisitor ) return ((CsVisitor<? extends T>)visitor).visitCls_field(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Cls_fieldContext cls_field() throws RecognitionException {
		Cls_fieldContext _localctx = new Cls_fieldContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_cls_field);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(155);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(152); other_modifiers();
					}
					} 
				}
				setState(157);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			setState(159);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(158); access_modifier();
				}
				break;
			}
			setState(164);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(161); other_modifiers();
					}
					} 
				}
				setState(166);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
			setState(167); type_specifier();
			setState(168); match(IDENTIFIER);
			setState(171);
			_la = _input.LA(1);
			if (_la==23) {
				{
				setState(169); match(23);
				setState(170); initializer();
				}
			}

			setState(173); match(66);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Cls_methodContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public Type_specifierContext type_specifier() {
			return getRuleContext(Type_specifierContext.class,0);
		}
		public Argument_expression_listContext argument_expression_list() {
			return getRuleContext(Argument_expression_listContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(CsParser.IDENTIFIER, 0); }
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public Access_modifierContext access_modifier() {
			return getRuleContext(Access_modifierContext.class,0);
		}
		public Other_modifiersContext other_modifiers(int i) {
			return getRuleContext(Other_modifiersContext.class,i);
		}
		public List<Other_modifiersContext> other_modifiers() {
			return getRuleContexts(Other_modifiersContext.class);
		}
		public Cls_methodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cls_method; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CsListener ) ((CsListener)listener).enterCls_method(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CsListener ) ((CsListener)listener).exitCls_method(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CsVisitor ) return ((CsVisitor<? extends T>)visitor).visitCls_method(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Cls_methodContext cls_method() throws RecognitionException {
		Cls_methodContext _localctx = new Cls_methodContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_cls_method);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(178);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(175); other_modifiers();
					}
					} 
				}
				setState(180);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			setState(182);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(181); access_modifier();
				}
				break;
			}
			setState(187);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(184); other_modifiers();
					}
					} 
				}
				setState(189);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			}
			}
			setState(190); type_specifier();
			setState(191); match(IDENTIFIER);
			setState(192); argument_expression_list();
			setState(193); match(51);
			setState(197);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 1) | (1L << 2) | (1L << 4) | (1L << 6) | (1L << 15) | (1L << 16) | (1L << 24) | (1L << 28) | (1L << 30) | (1L << 37) | (1L << 39) | (1L << 40) | (1L << 41) | (1L << 44) | (1L << 51) | (1L << 52) | (1L << 56) | (1L << 61) | (1L << 63))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (64 - 64)) | (1L << (66 - 64)) | (1L << (72 - 64)) | (1L << (75 - 64)) | (1L << (IDENTIFIER - 64)) | (1L << (CHARACTER_LITERAL - 64)) | (1L << (STRING_LITERAL - 64)) | (1L << (HEX_LITERAL - 64)) | (1L << (DECIMAL_LITERAL - 64)) | (1L << (OCTAL_LITERAL - 64)) | (1L << (FLOATING_POINT_LITERAL - 64)))) != 0)) {
				{
				{
				setState(194); statement();
				}
				}
				setState(199);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(200); match(12);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_definitionContext extends ParserRuleContext {
		public Direct_declaratorContext direct_declarator() {
			return getRuleContext(Direct_declaratorContext.class,0);
		}
		public Declaration_specifiersContext declaration_specifiers() {
			return getRuleContext(Declaration_specifiersContext.class,0);
		}
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public Compound_statementContext compound_statement() {
			return getRuleContext(Compound_statementContext.class,0);
		}
		public Function_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_definition; }
